--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@
     background-color:rgba(0,140,170,0.5);
   }
  section {
-  background-image: url("photos/running.jpg");
+  background-image: url("running.jpg");
   background-repeat:no-repeat;
   display: block;
   margin-left: auto;
